feat(crud): forms & tests

--- a/yumroad/templates/products/details.html
+++ b/yumroad/templates/products/details.html
@@ -1,5 +1,6 @@
 {% extends "base_layout.html" %}
 {% block title %} {{ product.name }} {% endblock %}
+{% block brandtitle %} Detail {% endblock %}
 
 {% block content %}
   <div class="container">
