--- a/yumroad/templates/products/index.html
+++ b/yumroad/templates/products/index.html
@@ -1,8 +1,10 @@
 {% extends "base_layout.html" %}
 {% block title %} All Products {% endblock %}
+{% block brandtitle %} All Products {% endblock %}
 
 {% block content %}
   <div class="container">
+    
     <table class="table">
         <thead>
           <tr>
@@ -19,6 +21,17 @@
                 </a>
               </th>
               <th scope="row">{{ product.description }}</th>
+
+              <th scope="row">
+                <a href="{{ url_for('products.edit', product_id=product.id) }}">
+                    Edit
+                </a>
+              </th>
+              <th scope="row">
+                <a href="{{ url_for('products.delete', product_id=product.id) }}">
+                    Delete
+                </a>
+              </th>
             </tr>
         {% endfor %}
         </tbody>
