--- a/yumroad/templates/base_layout.html
+++ b/yumroad/templates/base_layout.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <title>
-            {% block title %}{% endblock %} Yumroad
+            {% block title %}{% endblock %} | Yumroad
         </title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+        <meta name="csrf-token" content="{{ csrf_token() }}">
     </head>
     <body>
         <nav class="navbar navbar-light bg-light justify-content-between">
-            <a class="navbar-brand">Yumroad</a>
+            <a class="navbar-brand">Yumroad {% block brandtitle %} {% endblock %} </a>
         </nav>
 
         <div class="container mt-3">
