--- a/yumroad/templates/products/404.html
+++ b/yumroad/templates/products/404.html
@@ -5,7 +5,7 @@
   <div class="container">
     <h1> Whoops we couldn't find that product. </h1>
     <hr />
-    <a class="btn btn-primary" href="{{ url_for('products.index') }}">
+    <a class="btn btn-primary" href="{{ url_for('product.index') }}">
       View all products
     </a>
   </div>
