--- a/yumroad/templates/products/edit.html
+++ b/yumroad/templates/products/edit.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container">
 
-    <form method="POST" action="{{ url_for('products.edit', product_id=product.id) }}">
+    <form method="POST" action="{{ url_for('product.edit', product_id=product.id) }}">
       {{ form.csrf_token }}
 
       {{ render_field(form.name) }}
